# AI-AGENT-FRAMEWORK

./: .dockerignore  .env.example  .gitignore  AGENT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.sandbox  README.md  __init__.py  build.bat  build.sh  deploy.bat  deploy.sh  docker-compose.yml  install.ps1  install.sh  pyproject.toml  run.bat  run.sh  start.bat  start.sh  stop.bat  stop.ps1  test_frontend.py  uninstall.ps1  uninstall.sh
agents/equipment_monitor/: SOUL.md  profile.yaml
agents/production_scheduler/: SOUL.md  profile.yaml
agents/quality_inspector/: SOUL.md  profile.yaml
agents/teams/: production_team.yaml
config/: rbac.yaml  settings.yaml
deploy/: nginx.conf
docs/: architecture-deep-dive.md
gateway/: __init__.py  lane.py  router.py  server.py  session.py  types.py
gateway/adapters/: __init__.py  base.py  dingtalk.py  web.py
gateway/scheduler/: __init__.py
harness/: __init__.py
harness/context/: __init__.py  compressor.py  flush.py  placeholder.py  types.py
harness/evolution/: __init__.py  auto_evolve.py  gepa.py  three_agent.py  types.py
harness/expert/: __init__.py  agent_factory.py  registry.py  store.py  types.py  validator.py
harness/external_agent/: __init__.py  proxy.py  types.py
harness/mcp/: __init__.py  client.py  config.py  importer.py  manager.py  types.py
harness/memory/: __init__.py  evolution.py  heartbeat.py  long_term.py  (+4 more)
runtime/: __init__.py  agent.py  config.py  context_schema.py  models.py  tools.py
tests/: conftest.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+130 files in other folders)
