[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "Enterprise AI Native Agent Platform with Harness Layered Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-deepseek>=1.0.0",
    "langgraph>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "tiktoken>=0.9.0",
    "apscheduler>=3.10.0",
    "duckduckgo-search>=8.0.0",
    "bcrypt>=4.0.0",
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
llm-openai = ["langchain-openai>=0.3.0"]
llm-anthropic = ["langchain-anthropic>=0.3.0"]
llm-zhipu = ["langchain-community>=0.3.0"]
pg = ["asyncpg>=0.30.0", "pgvector>=0.3.0"]
sandbox = ["docker>=7.0.0"]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]
prod = ["gunicorn>=23.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "runtime", "gateway"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests requiring external services (PG, Redis, Docker)"]